# Bee-The-Indolent

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: meta.py  pattify.py  search.py
utils/: gif_converter.py  patpat_creator.py
